5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1885_3177.log
== TEST (2019-07-09 10:13:20) 
-- CODE:
from numpy import*

a=input("Digite uma string: ")
cont=0
for i in a:
	if(i=="a"):
		conta=cont+1
	elif(i=="e"):
		conte=cont+1
	elif(i=="i"):
		conti=cont+1
	elif(i=="o"):
		conto=cont+1
	elif(i=="u"):
		contu=cont+1

print("a: ",conta)
print("e: ",conte)
print("i: ",conti)
print("o: ",conto)
print("u: ",contu)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:46:24) 
-- CODE:
from numpy import*

a=input("Digite uma string: ")
cont=0
for i in a:
	if(a[i]=="a"):
		conta=cont+1
	elif(a[i]=="e"):
		conte=cont+1
	elif(a[i]=="i"):
		conti=cont+1
	elif(a[i]=="o"):
		conto=cont+1
	elif(a[i]=="u"):
		contu=cont+1

print("a: ",conta)
print("e: ",conte)
print("i: ",conti)
print("o: ",conto)
print("u: ",contu)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:46:52) 
-- CODE:
from numpy import*

a=array(input("Digite uma string: "))
cont=0
for i in a:
	if(a[i]=="a"):
		conta=cont+1
	elif(a[i]=="e"):
		conte=cont+1
	elif(a[i]=="i"):
		conti=cont+1
	elif(a[i]=="o"):
		conto=cont+1
	elif(a[i]=="u"):
		contu=cont+1

print("a: ",conta)
print("e: ",conte)
print("i: ",conti)
print("o: ",conto)
print("u: ",contu)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:50:47) 
-- CODE:
from numpy import*

st=(input("Digite uma string: "))
a=0
e=0
i=0
o=0
u=0
for i in range(st):
	if(st[i]=="a"):
		a=a+1
	elif(st[i]=="e"):
		e=e+1
	elif(st[i]=="i"):
		i=i+1
	elif(st[i]=="o"):
		o=o+1
	elif(st[i]=="u"):
		u=u+1

print("a: ",a)
print("e: ",e)
print("i: ",i)
print("o: ",o)
print("u: ",u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:57:03) 
-- CODE:
from numpy import*

string=(input("Digite uma string: "))
a=0
e=0
i=0
o=0
u=0

for in string :
	if(st[i]=="a"):
		a=a+1
	elif(st[i]=="e"):
		e=e+1
	elif(st[i]=="i"):
		i=i+1
	elif(st[i]=="o"):
		o=o+1
	elif(st[i]=="u"):
		u=u+1

print("a: ",a)
print("e: ",e)
print("i: ",i)
print("o: ",o)
print("u: ",u)
-- ERROR:
File "XXXX", line 10
    for in string :
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:57:15) 
-- CODE:
from numpy import*

string=(input("Digite uma string: "))
a=0
e=0
i=0
o=0
u=0

for i in string :
	if(st[i]=="a"):
		a=a+1
	elif(st[i]=="e"):
		e=e+1
	elif(st[i]=="i"):
		i=i+1
	elif(st[i]=="o"):
		o=o+1
	elif(st[i]=="u"):
		u=u+1

print("a: ",a)
print("e: ",e)
print("i: ",i)
print("o: ",o)
print("u: ",u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:00:59) 
-- CODE:
from numpy import*

string=(input("Digite uma string: "))

a=0
e=0
i=0
o=0
u=0

for i in string :
	if(string[i]=="a"):
		a=a+1
	elif(string[i]=="e"):
		e=e+1
	elif(string[i]=="i"):
		i=i+1
	elif(string[i]=="o"):
		o=o+1
	elif(string[i]=="u"):
		u=u+1

print("a: ",a)
print("e: ",e)
print("i: ",i)
print("o: ",o)
print("u: ",u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:06:24) 
-- CODE:
from numpy import*

string=(input("Digite uma string: "))

a=0
e=0
i=0
o=0
u=0

for i in range(size(string)):
	if(string[i]=="a"):
		a=a+1
	elif(string[i]=="e"):
		e=e+1
	elif(string[i]=="i"):
		i=i+1
	elif(string[i]=="o"):
		o=o+1
	elif(string[i]=="u"):
		u=u+1

print("a: ",a)
print("e: ",e)
print("i: ",i)
print("o: ",o)
print("u: ",u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:07:53) 
-- CODE:
from numpy import*

string=(input("Digite uma string: ")).(,)

a=0
e=0
i=0
o=0
u=0

for i in range(string):
	if(string[i]=="a"):
		a=a+1
	elif(string[i]=="e"):
		e=e+1
	elif(string[i]=="i"):
		i=i+1
	elif(string[i]=="o"):
		o=o+1
	elif(string[i]=="u"):
		u=u+1

print("a: ",a)
print("e: ",e)
print("i: ",i)
print("o: ",o)
print("u: ",u)
-- ERROR:
File "XXXX", line 3
    string=(input()).(,)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:08:13) 
-- CODE:
from numpy import*

string=(input("Digite uma string: "))

a=0
e=0
i=0
o=0
u=0

for i in range(string):
	if(string[i]=="a"):
		a=a+1
	elif(string[i]=="e"):
		e=e+1
	elif(string[i]=="i"):
		i=i+1
	elif(string[i]=="o"):
		o=o+1
	elif(string[i]=="u"):
		u=u+1

print("a: ",a)
print("e: ",e)
print("i: ",i)
print("o: ",o)
print("u: ",u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:08:58) 
-- CODE:
from numpy import*

string=(input("Digite uma string: "))

a=0
e=0
i=0
o=0
u=0

for i in range(lift(string)):
	if(string[i]=="a"):
		a=a+1
	elif(string[i]=="e"):
		e=e+1
	elif(string[i]=="i"):
		i=i+1
	elif(string[i]=="o"):
		o=o+1
	elif(string[i]=="u"):
		u=u+1

print("a: ",a)
print("e: ",e)
print("i: ",i)
print("o: ",o)
print("u: ",u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:10:33) 
-- CODE:
from numpy import*

string=(input("Digite uma string: "))

a=0
e=0
i=0
o=0
u=0

for i in range(ch(string)):
	if(string[i]=="a"):
		a=a+1
	elif(string[i]=="e"):
		e=e+1
	elif(string[i]=="i"):
		i=i+1
	elif(string[i]=="o"):
		o=o+1
	elif(string[i]=="u"):
		u=u+1

print("a: ",a)
print("e: ",e)
print("i: ",i)
print("o: ",o)
print("u: ",u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:11:34) 
-- CODE:
from numpy import*

string=(input("Digite uma string: "))

a=0
e=0
i=0
o=0
u=0

for i in range(shape(string)):
	if(string[i]=="a"):
		a=a+1
	elif(string[i]=="e"):
		e=e+1
	elif(string[i]=="i"):
		i=i+1
	elif(string[i]=="o"):
		o=o+1
	elif(string[i]=="u"):
		u=u+1

print("a: ",a)
print("e: ",e)
print("i: ",i)
print("o: ",o)
print("u: ",u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:11:58) 
-- CODE:
from numpy import*

string=(input("Digite uma string: "))

a=0
e=0
i=0
o=0
u=0

for i in range(randon(string)):
	if(string[i]=="a"):
		a=a+1
	elif(string[i]=="e"):
		e=e+1
	elif(string[i]=="i"):
		i=i+1
	elif(string[i]=="o"):
		o=o+1
	elif(string[i]=="u"):
		u=u+1

print("a: ",a)
print("e: ",e)
print("i: ",i)
print("o: ",o)
print("u: ",u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:13:11) 
-- CODE:
from numpy import*

string=(input("Digite uma string: "))

a=0
e=0
i=0
o=0
u=0

for i in range(left(string)):
	if(string[i]=="a"):
		a=a+1
	elif(string[i]=="e"):
		e=e+1
	elif(string[i]=="i"):
		i=i+1
	elif(string[i]=="o"):
		o=o+1
	elif(string[i]=="u"):
		u=u+1

print("a: ",a)
print("e: ",e)
print("i: ",i)
print("o: ",o)
print("u: ",u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:14:15) 
-- CODE:
from numpy import*

string=(input("Digite uma string: "))

a=0
e=0
i=0
o=0
u=0

for i in range(len(string)):
	if(string[i]=="a"):
		a=a+1
	elif(string[i]=="e"):
		e=e+1
	elif(string[i]=="i"):
		i=i+1
	elif(string[i]=="o"):
		o=o+1
	elif(string[i]=="u"):
		u=u+1

print("a: ",a)
print("e: ",e)
print("i: ",i)
print("o: ",o)
print("u: ",u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:14:58) 
-- CODE:
from numpy import*

string=(input("Digite uma string: "))

a=0
e=0
i=0
o=0
u=0

for x in range(len(string)):
	if(string[x]=="a"):
		a=a+1
	elif(string[x]=="e"):
		e=e+1
	elif(string[x]=="i"):
		i=i+1
	elif(string[x]=="o"):
		o=o+1
	elif(string[x]=="u"):
		u=u+1

print("a: ",a)
print("e: ",e)
print("i: ",i)
print("o: ",o)
print("u: ",u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 11:15:09) 
-- CODE:
from numpy import*

string=(input("Digite uma string: "))

a=0
e=0
i=0
o=0
u=0

for x in range(len(string)):
	if(string[x]=="a"):
		a=a+1
	elif(string[x]=="e"):
		e=e+1
	elif(string[x]=="i"):
		i=i+1
	elif(string[x]=="o"):
		o=o+1
	elif(string[x]=="u"):
		u=u+1

print("a: ",a)
print("e: ",e)
print("i: ",i)
print("o: ",o)
print("u: ",u)
-- EXECUTION TIME:
1.04481
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a:  1
e:  1
i:  1
o:  1
u:  1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a:  2
e:  1
i:  1
o:  0
u:  0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a:  1
e:  0
i:  0
o:  3
u:  0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
